# mirrors_and_lasers

./: CMakeLists.txt  README.md  intersection_search_helper.cpp  intersection_search_helper.h  main.cpp  ray_segment_intersection_finder.cpp  ray_segment_intersection_finder.h  safe_checker.cpp  safe_checker.h
test/: CMakeLists.txt  safe_checker_test.cpp
